--- a/python/sonho/Dockerfile
+++ b/python/sonho/Dockerfile
@@ -2,8 +2,15 @@
 FROM python:3.12-slim
 
 # Atualizar pacotes e instalar ferramentas necessárias
-RUN apt-get update && apt-get install -y nano cron bash wget \
+RUN apt-get update && apt-get install -y bash nano wget cron tzdata \
     && rm -rf /var/lib/apt/lists/*
+
+# Configurar o fuso horário
+ENV TZ=America/Sao_Paulo
+
+# Atualizar o fuso horário do container
+RUN ln -fs /usr/share/zoneinfo/$TZ /etc/localtime \
+    && dpkg-reconfigure --frontend noninteractive tzdata
 
 # Instale as dependências do Python
 WORKDIR /app
@@ -17,10 +24,10 @@ COPY cleaning /app/cleaning
 # Adicione o arquivo crontab ao container
 COPY crontab /etc/cron.d/log_cron
 
+COPY init.sh /app/
+
 # Dê permissão para os scripts e para o arquivo crontab
-RUN chmod +x /app/scraping/scrape_poste.sh \
-    && chmod +x /app/scraping/scrape_palpite.sh \
-    && chmod +x /app/scraping/scrape_sonho.sh \
+RUN chmod +x /app/scraping/scrape_sonho.sh \
     && chmod 0644 /etc/cron.d/log_cron
 
 # Aplique as permissões e registre o cron no sistema
@@ -31,5 +38,4 @@ RUN mkdir -p /var/log \
     && chown root:root /var/log \
     && chmod 0755 /var/log
 
-# Executa o cron
-CMD ["cron", "-f"]
+CMD ["/bin/bash", "/app/init.sh"]
