--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -5,17 +5,19 @@ FROM node:latest
 RUN apt-get update && apt-get install -y git
 
 # Definir o diretório de trabalho dentro do container
-WORKDIR /app
+WORKDIR /server
+
+# Copie os scripts para o container
+COPY app.js /server
+COPY package-lock.json /server
+COPY package.json /server
+COPY html /server/html
 
 # Define uma váriavel de ambiente, nesse caso a porta
 # Fazendo isso podemos ler o valor da porta no nosso arquivo app.js utilizando process.env.PORT
 ENV PORT=4000
-
-# Clonar o repositório do servidor
-RUN git clone https://github.com/brunof5/Projeto-Scraping.git .
-
-# Mudar para o diretório src onde está o package.json
-WORKDIR /app/src
+ENV EMAIL_USER='jogo-do-bicho-notificacoes@hotmail.com'
+ENV EMAIL_PASS=secret
 
 # Instalar dependências do Node.js
 RUN npm install
