--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "axios": "^1.7.3",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.14"
   }
 }
