Adicionando comentários e melhorando legibilidade

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,28 +1,24 @@
 # Imagem da versão mais recente do Node.js
 FROM node:latest
 
-# Instalar Git
-RUN apt-get update && apt-get install -y git
-
-# Definir o diretório de trabalho dentro do container
+# Define o diretório de trabalho dentro do container
 WORKDIR /server
 
-# Copie os scripts para o container
+# Copia os scripts para o container
 COPY app.js /server
 COPY package-lock.json /server
 COPY package.json /server
 COPY html /server/html
 
-# Define uma váriavel de ambiente, nesse caso a porta
-# Fazendo isso podemos ler o valor da porta no nosso arquivo app.js utilizando process.env.PORT
+# Define as váriaveis de ambiente, nesse caso a porta e o usuário/senha do e-mail que enviará notificações
 ENV PORT=4000
 ENV EMAIL_USER='jogo-do-bicho-notificacoes@hotmail.com'
 ENV EMAIL_PASS=secret
 
-# Instalar dependências do Node.js
+# Instala as dependências do Node.js
 RUN npm install
 
-# Expor a porta que o servidor utilizará
+# Expõe a porta que o servidor utilizará
 EXPOSE $PORT
 
 # Comando para iniciar o servidor Node.js
